# hospobot

./: .gitignore  README.md  start_realsense.sh  teleop_odesc.py  test_dual_odesc.py  test_imu_euler.py  test_odesc_uart.py
src/hospobot/: hospobot_urdf.xacro  imu_debug.py  setup_rover.sh
src/hospobot/src/hospobot_perception/: setup.py
src/hospobot/src/hospobot_perception/hospobot_perception/: object_detector_node.py
src/hospobot/src/odesc_hardware/: package.xml  setup.cfg
src/hospobot/src/odesc_hardware/odesc_hardware/: __init__.py  bno086_node.py  diagnostics_node.py  nav2_manager_node.py
src/hospobot/src/rover_bringup/: package.xml  setup.py
src/hospobot/src/rover_bringup/config/: ekf.yaml  mapper_params_online_async.yaml
src/hospobot/src/rover_bringup/launch/: hospobot_launch.py
src/hospobot/src/rover_bringup/maps/: hospital_map.yaml
src/hospobot/src/rover_description/: CMakeLists.txt  package.xml
src/hospobot_perception/: package.xml  setup.cfg
src/odesc_hardware/: setup.py
src/odesc_hardware/odesc_hardware/: cmd_vel_mux.py  odesc_drive_node.py
src/rover_bringup/launch/: robot_launch.py
src/rover_bringup/maps/: hospital_map.pgm
src/rover_description/urdf/: rover.urdf.xacro
web_dash/: hospobot_webdash.html
